--- a/view/common/block-template/media-toggle-caption.phtml
+++ b/view/common/block-template/media-toggle-caption.phtml
@@ -10,51 +10,52 @@ $currentLocale = $this->siteSetting('locale') ?: 'en';
     <?php foreach($attachments as $attachment): ?>
     <?php $item = $attachment->item(); ?>
     <div class="item resource toggle-caption-block padding-horizontal-1 large-padding-horizontal-2">
-        <?php
-        $media = $attachment->media() ?: $item->primaryMedia();
-        if ($media):
-            if ($mediaDisplay === 'thumbnail') {
-                switch ($link) {
-                    case 'original':
-                        $url = $media->originalUrl();
-                        break;
-                    case 'item':
-                        $url = $item->url();
-                        break;
-                    case 'media':
-                        $url = $media->url();
-                        break;
-                    default:
-                        throw new \InvalidArgumentException(sprintf('Invalid link type "%s"', $linkType));
+        <div class="toggle-caption-img">
+            <?php
+            $media = $attachment->media() ?: $item->primaryMedia();
+            if ($media):
+                if ($mediaDisplay === 'thumbnail') {
+                    switch ($link) {
+                        case 'original':
+                            $url = $media->originalUrl();
+                            break;
+                        case 'item':
+                            $url = $item->url();
+                            break;
+                        case 'media':
+                            $url = $media->url();
+                            break;
+                        default:
+                            throw new \InvalidArgumentException(sprintf('Invalid link type "%s"', $linkType));
+                    }
+                    echo $hyperlink->raw($this->thumbnail($media, $thumbnailType), $url);
+                } else {
+                    echo $media->render([
+                        'thumbnailType' => $thumbnailType,
+                        'link' => $link,
+                    ]);
                 }
-                echo $hyperlink->raw($this->thumbnail($media, $thumbnailType), $url);
-            } else {
-                echo $media->render([
-                    'thumbnailType' => $thumbnailType,
-                    'link' => $link,
-                ]);
-            }
-            $caption = $attachment->caption(); ?>
-            <div class="toggle-caption">
-                <?php if ($attachment->caption()): ?>
-                    <?php if (isset($caption) && !empty($caption)) : ?>
-                        <button id="reveal-caption" type="button" data-toggle="show-caption-id-<?= htmlspecialchars($uniqueId, ENT_QUOTES, 'UTF-8') ?>" class="flex-container flex-dir-column align-spaced align-middle button warning">
-                            <?php if ($currentLocale == 'es'): ?>
-                                <h2 class="h5 margin-top-0">Lea la descripción de la imagen</h2>
-                            <?php else: ?>
-                                <h2 class="h5 margin-top-0">Read a description of the image</h2>
-                            <?php endif; ?>
-                        </button>
-                        <figcaption class="orbit-caption padding-1 reveal-caption" id="show-caption-id-<?=$uniqueId ?>" data-toggler=".reveal-caption">
-                            <?=$caption
-                                ?>
-                        </figcaption>
+                $caption = $attachment->caption(); ?>
+                <div class="toggle-caption">
+                    <?php if ($attachment->caption()): ?>
+                        <?php if (isset($caption) && !empty($caption)) : ?>
+                            <button id="reveal-caption" type="button" data-toggle="show-caption-id-<?= htmlspecialchars($uniqueId, ENT_QUOTES, 'UTF-8') ?>" class="flex-container flex-dir-column align-spaced align-middle button warning">
+                                <?php if ($currentLocale == 'es'): ?>
+                                    <h2 class="h5 margin-top-0">Lea la descripción de la imagen</h2>
+                                <?php else: ?>
+                                    <h2 class="h5 margin-top-0">Read a description of the image</h2>
+                                <?php endif; ?>
+                            </button>
+                            <figcaption class="orbit-caption padding-1 reveal-caption" id="show-caption-id-<?=$uniqueId ?>" data-toggler=".reveal-caption">
+                                <?=$caption
+                                    ?>
+                            </figcaption>
+                        <?php endif; ?>
                     <?php endif; ?>
-                <?php endif; ?>
-            </div>
-        <?php endif;
-        ?>
-
+                </div>
+            <?php endif;
+            ?>
+        </div>
         <div class="metadata margin-vertical-1">
             <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == "item_title"): ?>
