--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3084,3 +3084,31 @@ bottom: 20%;
   font-size: 2rem;
   margin: 0 2rem;
   }
+
+  /*Content Warning*/
+.content-warning {
+  background-color: $light-gray;
+  color: $black;
+}
+
+.content-warning-panel {
+  background-color: $dark-gray;
+  padding: 0 0.5 * $global-padding;
+  width: 100%;
+  min-height: 40px;
+  @include breakpoint(medium) {
+    max-width: 40px;
+  }
+  @include breakpoint(large) {
+    padding: 0 $global-padding;
+  }
+}
+
+.content-warning-text {
+  padding: 3 * $global-padding 0;
+}
+
+.fa-exclamation-triangle:before {
+  color: $white;
+  font-size: 18px;
+}
