--- a/view/common/block-template/media-toggle-caption.phtml
+++ b/view/common/block-template/media-toggle-caption.phtml
@@ -41,9 +41,9 @@ $currentLocale = $this->siteSetting('locale') ?: 'en';
                         <?php if (isset($caption) && !empty($caption)) : ?>
                             <button id="reveal-caption" type="button" data-toggle="show-caption-id-<?= htmlspecialchars($uniqueId, ENT_QUOTES, 'UTF-8') ?>" class="flex-container flex-dir-column align-spaced align-middle button warning">
                                 <?php if ($currentLocale == 'es'): ?>
-                                    <h2 class="h5 margin-top-0">Lea la descripción de la imagen</h2>
+                                    <p class="h6 margin-top-0">Lea la descripción de la imagen</p>
                                 <?php else: ?>
-                                    <h2 class="h5 margin-top-0">Read a description of the image</h2>
+                                    <p class="h6 margin-top-0">Read a description of the image</p>
                                 <?php endif; ?>
                             </button>
                             <figcaption class="orbit-caption padding-1 reveal-caption" id="show-caption-id-<?=$uniqueId ?>" data-toggler=".reveal-caption">
