--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -2204,8 +2204,8 @@ grid-template-areas:
   @include breakpoint(large) {
   grid-template-columns: 2fr 2fr;
   grid-template-areas:
-  ". header . ."
-  ". media-block text .";
+  "header ."
+  "media-block text";
 }
 @include breakpoint(xlarge) {
   grid-template-columns: 0.5fr 2fr 2fr 0.5fr;
