Removed no-p-margin-bottom class from html text templates

--- a/view/common/block-template/html-text-dark.phtml
+++ b/view/common/block-template/html-text-dark.phtml
@@ -8,7 +8,7 @@
 
 <div class="full-width padding-vertical-1 dark-background">
     <div class="grid-x grid-container">
-        <div class="padding-vertical-1 large-padding-vertical-2 no-p-margin-bottom">
+        <div class="padding-vertical-1 large-padding-vertical-2">
             <?= $block->dataValue('html', '') ?>
         </div>
     </div>
