Added rule to remove text decoration for button links

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1936,6 +1936,10 @@ ul.language-switcher.locale-code li span.active {
   text-decoration: underline;
 }
 
+.dark-background h2.button a:hover {
+  text-decoration: none;
+}
+
 /*White Text*/ 
 .white-text p,
 .white-text h2,
