--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -63,74 +63,77 @@ foreach ($itemMedia as $index => $media) {
 }
 ?>
 
-<div class="resource-title">
-    <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
-    <h2 class="label"><?php echo $translate('Item'); ?></h2>
-</div>
-
-<div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
-    <?php $this->trigger('view.show.before'); ?>
-
-    <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
-        <?php 
-        // Display the main viewer
-        if ($miradorViewer !== null) {
-            echo $miradorViewer;
-        }
-        elseif ($miradorImageViewer !== null) {
-            echo $miradorImageViewer;
-        } 
-        elseif ($universalViewer !== null) {
-            echo $universalViewer;
-        } 
-        elseif ($youtubeViewer !== null) {
-            echo $youtubeViewer;
-        } 
-        elseif ($defaultViewer !== null) {
-            echo $defaultViewer;
-        }
-        ?>
-    </div>
-</div>
-
-    <?php if ($fullWidthMainHasBlocks): ?>
-    <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
-        <?php echo $fullWidthMainBlockContent->getBlocks(); ?>
-    </div>
-    <?php endif; ?>
-
-    <?php if ($mainWithSidebarHasBlocks || $leftSidebarHasBlocks || $rightSidebarHasBlocks): ?>
-    
-    <?php 
-    if ($leftSidebarHasBlocks && $rightSidebarHasBlocks) {
-        $sidebarWidth = '3';
-        $mainWidth = '6';
-    } else {
-        $sidebarWidth = '4';
-        $mainWidth = '8';
-    }
-    ?>
-    
-    <div class="grid-x grid-margin-x margin-bottom-1 large-margin-bottom-2 xlarge-margin-bottom-3">
-        <?php if ($leftSidebarHasBlocks): ?>
-        <div class="left-sidebar cell medium-<?php echo $sidebarWidth; ?> margin-top-1 medium-margin-top-2 xlarge-margin-top-3">
-            <?php echo $leftSidebarBlockContent->getBlocks(); ?>
+<div class="full-width">
+    <div class="grid-x grid-padding-x flex-container">
+        <div class="grid-container resource-title">
+            <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
+            <h2 class="label"><?php echo $translate('Item'); ?></h2>
         </div>
-        <?php endif; ?>
+        <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
+            <?php $this->trigger('view.show.before'); ?>
 
-        <?php if ($mainWithSidebarHasBlocks): ?>
-        <div class="main-with-sidebar cell medium-<?php echo $mainWidth; ?> margin-top-1 medium-margin-top-2 xlarge-margin-top-3">
-            <?php echo $mainWithSidebarBlockContent->getBlocks(); ?>
+            <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
+                <?php 
+                // Display the main viewer
+                if ($miradorViewer !== null) {
+                    echo $miradorViewer;
+                }
+                elseif ($miradorImageViewer !== null) {
+                    echo $miradorImageViewer;
+                } 
+                elseif ($universalViewer !== null) {
+                    echo $universalViewer;
+                } 
+                elseif ($youtubeViewer !== null) {
+                    echo $youtubeViewer;
+                } 
+                elseif ($defaultViewer !== null) {
+                    echo $defaultViewer;
+                }
+                ?>
+            </div>
         </div>
-        <?php endif; ?>
 
-        <?php if ($rightSidebarHasBlocks): ?>
-        <div class="right-sidebar cell medium-<?php echo $sidebarWidth; ?> dark-background margin-top-1 large-margin-top-0 padding-1 large-padding-2 xlarge-padding-3">
-            <?php echo $rightSidebarBlockContent->getBlocks(); ?>
+            <?php if ($fullWidthMainHasBlocks): ?>
+            <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
+                <?php echo $fullWidthMainBlockContent->getBlocks(); ?>
+            </div>
+            <?php endif; ?>
+
+            <?php if ($mainWithSidebarHasBlocks || $leftSidebarHasBlocks || $rightSidebarHasBlocks): ?>
+            
+            <?php 
+            if ($leftSidebarHasBlocks && $rightSidebarHasBlocks) {
+                $sidebarWidth = '3';
+                $mainWidth = '6';
+            } else {
+                $sidebarWidth = '4';
+                $mainWidth = '8';
+            }
+            ?>
+            
+            <div class="grid-x grid-margin-x margin-bottom-1 large-margin-bottom-2 xlarge-margin-bottom-3">
+                <?php if ($leftSidebarHasBlocks): ?>
+                <div class="left-sidebar cell medium-<?php echo $sidebarWidth; ?> margin-top-1 medium-margin-top-2 xlarge-margin-top-3">
+                    <?php echo $leftSidebarBlockContent->getBlocks(); ?>
+                </div>
+                <?php endif; ?>
+
+                <?php if ($mainWithSidebarHasBlocks): ?>
+                <div class="main-with-sidebar cell medium-<?php echo $mainWidth; ?> margin-top-1 medium-margin-top-2 xlarge-margin-top-3">
+                    <?php echo $mainWithSidebarBlockContent->getBlocks(); ?>
+                </div>
+                <?php endif; ?>
+
+                <?php if ($rightSidebarHasBlocks): ?>
+                <div class="right-sidebar cell medium-<?php echo $sidebarWidth; ?> dark-background margin-top-1 large-margin-top-0 padding-1 large-padding-2 xlarge-padding-3">
+                    <?php echo $rightSidebarBlockContent->getBlocks(); ?>
+                </div>
+                <?php endif; ?>
+            </div>
+            <?php endif; ?>
+
+            <?php $this->trigger('view.show.after'); ?>
         </div>
-        <?php endif; ?>
     </div>
-    <?php endif; ?>
-
-    <?php $this->trigger('view.show.after'); ?>
 </div>
