--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1328,6 +1328,51 @@ margin-top: 2 * $global-margin;
   } 
   }
 
+/*Light Gallery*/ 
+/*Minimum height*/ 
+#itemfiles {
+  min-height: 40vh !important;
+  @include breakpoint(medium) {
+  min-height: 60vh !important;
+  }
+  @include breakpoint(large) {
+    min-height: 80vh !important;
+  }
+  @include breakpoint(xlarge) {
+    min-height: 90vh !important;
+  }
+}
+/*Disable Item Show Download Button*/ 
+#lg-download-1 {
+  display: none;
+}
+
+/*Increase YouTube embed size for Item Show*/ 
+.resource.show .media-render.youtube>* {
+  max-width: unset;
+}
+.main-with-sidebar .youtube iframe {
+  width: 100%;
+  height: 300px;
+  border-radius: rem-calc(6);
+  @include breakpoint(medium) {
+    height: 350px;
+    max-width: 467px !important;
+  }
+  @include breakpoint(large) {
+    max-width: 622px !important;
+  }
+  @include breakpoint(xlarge) {
+    height: 400px;
+    max-width: 711px !important;
+  }
+}
+
+/*Centre Items*/ 
+.main-with-sidebar .media-render {
+  text-align: center;
+}
+
 /*IvyRze blocks*/ 
 /*Accordion*/ 
 .accordion-trigger {
