--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -168,12 +168,16 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
         <script>
           $(document).foundation();
         </script>
-        <!-- Load the content warning banner code --> 
-        <?php echo $this->partial('/templates/content-warning-banner'); ?>
+        <!-- Commenting PHP and HTML separately -->
+        <!-- Load the content warning banner code -->
+        <?php 
+        // echo $this->partial('/templates/content-warning-banner'); 
+        ?>
         <!-- End content warning banner -->
+
         <?php       
         // Call the function, passing necessary parameters
-        showContentBanner($site, $currentLocale);
+        // showContentBanner($site, $currentLocale);
         ?>
     </body>
 </html>
