--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -23,6 +23,40 @@ $rightSidebarHasBlocks = $rightSidebarBlockContent->hasBlocks();
 $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $this->lang();
 $valueLang = $filterLocale ? [$lang, ''] : null;
+
+$viewers = [];
+$youtubeViewer = null;
+$defaultViewer = null;
+$firstMedia = true; // Ensure this is defined
+
+foreach ($itemMedia as $index => $media) {
+    $mediaType = $media->mediaType();
+    $mediaRenderer = $media->renderer();
+
+    // Debugging output
+    // echo "Index: $index, Media Renderer: $mediaRenderer, Media Type: $mediaType<br>";
+
+    if ($firstMedia) {
+        if ($mediaRenderer == 'youtube') {
+            $viewers[] = 'youtube';
+            $youtubeViewer = "<div class='responsive-embed widescreen'>" . $media->render() . "</div>";
+            $firstMedia = false;
+        } else {
+            $viewers[] = 'default';
+            $defaultViewer = $media->render();
+            $firstMedia = false;
+        }
+    } 
+    // else {
+        // Optional logic for additional media
+        //echo "Additional media detected at index $index.<br>";
+    //}
+}
+
+// Debugging output to inspect viewers
+//echo "<pre>";
+// print_r($viewers);
+// echo "</pre>";
 ?>
 
 <div class="resource-title">
@@ -33,7 +67,21 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
 <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
     <?php if ($fullWidthMainHasBlocks): ?>
-    <div class="full-width-main">
+    <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
+        <?php $this->trigger('view.show.before'); ?>
+
+    <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
+        <?php 
+        // Display the main viewer
+        if ($youtubeViewer !== null) {
+            echo $youtubeViewer;
+        } 
+        elseif ($defaultViewer !== null) {
+            echo $defaultViewer;
+        }
+        ?>
+    </div>
+</div>
         <?php echo $fullWidthMainBlockContent->getBlocks(); ?>
     </div>
     <?php endif; ?>
