Revised link colouring

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1301,19 +1301,6 @@ dl dt {
   }
 }
 
-/*Feature for links*/
-dd.value a {
-  padding: .5 * $global-padding;
-  background: $primary-color;
-  color: $white;
-  line-height: 2;
-  &:hover {
-    background: darken($primary-color, 10%);
-    cursor: pointer;
-    text-decoration: none;
-  }
-}
-
 .property {
   margin-bottom: 2 * $global-margin;
 }
@@ -1332,9 +1319,9 @@ margin-top: 2 * $global-margin;
     color: $primary-color;
   }
 
-.right-sidebar .property dd.value a:hover {
+/*.right-sidebar .property dd.value a:hover {
   text-decoration: underline;
-}
+}*/
 
   .right-sidebar.dark-background {
     @include breakpoint (medium down) {
@@ -1343,6 +1330,20 @@ margin-top: 2 * $global-margin;
   width: 100%;
   } 
   }
+
+/*Feature for links*/
+dd.value a {
+  padding: .5 * $global-padding;
+  background: $secondary-color;
+  color: $white;
+  line-height: 2;
+  text-decoration: none;
+  &:hover {
+    background: darken($secondary-color, 10%);
+    cursor: pointer;
+    text-decoration: none;
+  }
+}
 
 /*Light Gallery*/ 
 /*Minimum height*/ 
